# NightEngine

./: .gitignore  CMakeLists.txt
include/: Engine.h
include/interfaces/: IState.h
include/managers/: StateManager.h
src/: CMakeLists.txt  Engine.cpp
src/interfaces/: IState.cpp
src/managers/: StateManager.cpp
